--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,16 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
   <link rel="manifest" href="./images/favicon/site.webmanifest" />
   <link rel="stylesheet" href="./sass/index.scss" />
-  <script src="./index.js" type="module"></script>
+  <script defer src="./index.js" type="module"></script>
 </head>
 
 <body>
-  <div class="container">
+  <div class="main-container">
     <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
+    <!-- <include src="./partials/hero.html"></include> -->
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
   </div>
-
 </body>
 
 </html>
