--- a/src/articles.html
+++ b/src/articles.html
@@ -180,15 +180,15 @@
         <hr class="horizontal-line">
 
         <div class="article-wrapper">
-            <a href="./articles/1cemp.html">
+            <a href="./articles/club.html">
                 <img class="article-img" src="./images/articlepics/nxnc.jpg" alt="club members" loading="lazy">
             </a>
             <div class="titlebrief-wrapper">
                 <p class="article-date">21.12.2022</p>
-                <a href="./articles/1cemp.html">
+                <a href="./articles/club.html">
                     <h2 class="article-title">Як створювався рибальський клуб НХНЛ.</h2>
                 </a>
-                <a href="./articles/1cemp.html">
+                <a href="./articles/club.html">
                     <article class="article-brief">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
                         vero,
                         nostrum
@@ -222,15 +222,15 @@
         </div>
 
         <div class="article-wrapper">
-            <a href="./articles/1cemp.html">
+            <a href="./articles/hooks.html">
                 <img class="article-img" src="./images/articlepics/hooks.jpg" alt="hooks" loading="lazy">
             </a>
             <div class="titlebrief-wrapper">
                 <p class="article-date">07.08.2022</p>
-                <a href="./articles/1cemp.html">
+                <a href="./articles/hooks.html">
                     <h2 class="article-title">Як я обираю гачки на фідерну риболовлю?</h2>
                 </a>
-                <a href="./articles/1cemp.html">
+                <a href="./articles/hooks.html">
                     <article class="article-brief">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
                         vero,
                         nostrum
