--- a/src/seminars.html
+++ b/src/seminars.html
@@ -184,26 +184,18 @@
 | form
 |============================
 */ -->
-        <form action="/my-handling-form-page" method="post">
-            <div>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="user_name">
-            </div>
-
-            <div>
-                <label for="mail">E-mail:</label>
-                <input type="email" id="mail" name="user_email">
-            </div>
-
-            <div>
-                <label for="msg">Message:</label>
-                <textarea id="msg" name="user_message"></textarea>
-            </div>
-
-            <div class="button">
-                <button type="submit">Send your message</button>
-            </div>
-        </form>
+        <div>
+            <form id="contact-form">
+                <input type="hidden" name="contact_number">
+                <label>Name</label>
+                <input type="text" name="user_name">
+                <label>Email</label>
+                <input type="email" name="user_email">
+                <label>Message</label>
+                <textarea name="message"></textarea>
+                <input type="submit" value="Send">
+            </form>
+        </div>
         <!-- /**
 |============================
 | footer
@@ -258,12 +250,18 @@
 
         <!-- /**
             |============================
-            | script for mobile menu
+            | script for mobile menu 
             |============================
             */ -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
             integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
             crossorigin="anonymous"></script>
+        <!-- /**
+            |============================
+            | scrips for email
+            |============================
+            */ -->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>
 
 </html>
