--- a/src/seminars.html
+++ b/src/seminars.html
@@ -184,7 +184,7 @@
 | form
 |============================
 */ -->
-        <div>
+        <div class="form-container">
             <form id="contact-form">
                 <input type="hidden" name="contact_number">
                 <label>Name</label>
@@ -258,7 +258,7 @@
             crossorigin="anonymous"></script>
         <!-- /**
             |============================
-            | scrips for email
+            | script for email
             |============================
             */ -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
