--- a/src/seminars.html
+++ b/src/seminars.html
@@ -10,7 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
     <link rel="manifest" href="./images/favicon/site.webmanifest" />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script src="./js/seminars.js" type="module"></script>
+    <script src="./js/mobmenu.js" type="module"></script>
+    <script src="./js/emailform.js" type="module"></script>
 </head>
 
 <body>
