--- a/src/seminars.html
+++ b/src/seminars.html
@@ -188,12 +188,12 @@
         <div class="form-container">
             <form id="contact-form">
                 <input type="hidden" name="contact_number">
-                <label>Name</label>
-                <input type="text" name="user_name">
-                <label>Email</label>
-                <input type="email" name="user_email">
-                <label>Message</label>
-                <textarea name="message"></textarea>
+                <label>Name
+                    <input type="text" name="user_name"></label>
+                <label>Email
+                    <input type="email" name="user_email"></label>
+                <label>Message
+                    <textarea name="message"></textarea></label>
                 <input type="submit" value="Send">
             </form>
         </div>
