--- a/src/seminars.html
+++ b/src/seminars.html
@@ -186,15 +186,21 @@
 |============================
 */ -->
         <div class="form-container">
-            <form id="contact-form">
+            <form class="contact-form" id="contact-form">
                 <input type="hidden" name="contact_number">
-                <label>Name
-                    <input type="text" name="user_name"></label>
-                <label>Email
-                    <input type="email" name="user_email"></label>
-                <label>Message
-                    <textarea name="message"></textarea></label>
-                <input type="submit" value="Send">
+                <label class="form-name">Ваше і'мя
+                    <input class="form-input-name" type="text" name="user_name" placeholder="Іван Іванович"
+                        required></label>
+                <label class="form-phone">Телефон
+                    <input class="form-input-phone" type="tel" name="user_phone" placeholder="0991234567" required
+                        pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></label>
+                <label class="form-email">Email
+                    <input class="form-input-email" type="email" name="user_email" placeholder="ivan@gmail.com"
+                        required></label>
+                <label class="form-textarea">Деталі щодо семінару
+                    <textarea class="form-texarea-input" name="message" placeholder="Пропозиції щодо семінару" required
+                        maxlength="1000"></textarea></label>
+                <input class="form-submit" type="submit" value="НАДІСЛАТИ">
             </form>
         </div>
         <!-- /**
