--- a/src/seminars.html
+++ b/src/seminars.html
@@ -201,7 +201,7 @@
                 <label class="form-textarea">Деталі щодо семінару
                     <textarea class="form-texarea-input" name="message" placeholder="Пропозиції щодо семінару" required
                         maxlength="1000"></textarea></label>
-                <input class="form-submit" type="submit" value="НАДІСЛАТИ">
+                <input class="form-submit" type="submit" value="НАДІСЛАТИ" disabled>
             </form>
         </div>
         <!-- /**
